[package]
name = "todo_txter"
version = "0.1.0"
edition = "2021"
authors = ["Miles Glapa-Grossklag"]
description = "An implementation of the todo.txt format."
homepage = "https://github.com/glapa-grossklag/todo_txter"
repository = "https://github.com/glapa-grossklag/todo_txter"
documentation = "https://docs.rs/todo_txter"
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.5"
